// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TokenController DELETE /tokens/listed/{token_address} should return 200 with valid auth key and valid token 1`] = `
{
  "address": "ct_token3",
  "decimals": 18,
  "listed": true,
  "malformed": false,
  "name": "3",
  "noContract": false,
  "pairs": 1,
  "priceAe": null,
  "priceChangeDay": null,
  "priceChangeMonth": null,
  "priceChangeWeek": null,
  "priceChangeYear": null,
  "priceUsd": null,
  "symbol": "3",
  "totalReserve": null,
  "tvlAe": "4.8e-17",
  "tvlUsd": "0",
  "volumeUsdAll": "0",
  "volumeUsdDay": "0",
  "volumeUsdMonth": "0",
  "volumeUsdWeek": "0",
  "volumeUsdYear": "0",
}
`;

exports[`TokenController DELETE /tokens/listed/{token_address} should return 200 with valid auth key and valid token 2`] = `
{
  "address": "ct_token3",
  "decimals": 18,
  "listed": false,
  "malformed": false,
  "name": "3",
  "noContract": false,
  "symbol": "3",
}
`;

exports[`TokenController DELETE /tokens/listed/{token_address} should return 200 with valid auth key and valid token 3`] = `
{
  "address": "ct_token3",
  "decimals": 18,
  "listed": false,
  "malformed": false,
  "name": "3",
  "noContract": false,
  "pairs": 1,
  "priceAe": null,
  "priceChangeDay": null,
  "priceChangeMonth": null,
  "priceChangeWeek": null,
  "priceChangeYear": null,
  "priceUsd": null,
  "symbol": "3",
  "totalReserve": null,
  "tvlAe": "4.8e-17",
  "tvlUsd": "0",
  "volumeUsdAll": "0",
  "volumeUsdDay": "0",
  "volumeUsdMonth": "0",
  "volumeUsdWeek": "0",
  "volumeUsdYear": "0",
}
`;

exports[`TokenController GET /tokens should return all tokens even if some are listed 1`] = `
[
  {
    "address": "ct_token1",
    "decimals": 18,
    "listed": true,
    "malformed": false,
    "name": "1",
    "noContract": false,
    "pairs": 1,
    "priceAe": "0.05308695",
    "priceChangeDay": "0",
    "priceChangeMonth": "0",
    "priceChangeWeek": "0",
    "priceChangeYear": "0",
    "priceUsd": "0.0027",
    "symbol": "1",
    "totalReserve": "1e-15",
    "tvlAe": "5.3e-17",
    "tvlUsd": "0",
    "volumeUsdAll": "0",
    "volumeUsdDay": "0",
    "volumeUsdMonth": "0",
    "volumeUsdWeek": "0",
    "volumeUsdYear": "0",
  },
  {
    "address": "ct_token2",
    "decimals": 18,
    "listed": false,
    "malformed": false,
    "name": "2",
    "noContract": false,
    "pairs": 3,
    "priceAe": "0.101118",
    "priceChangeDay": "0",
    "priceChangeMonth": "0",
    "priceChangeWeek": "0",
    "priceChangeYear": "0",
    "priceUsd": "0.0051",
    "symbol": "2",
    "totalReserve": "1e-15",
    "tvlAe": "1.01e-16",
    "tvlUsd": "0",
    "volumeUsdAll": "0",
    "volumeUsdDay": "0",
    "volumeUsdMonth": "0",
    "volumeUsdWeek": "0",
    "volumeUsdYear": "0",
  },
  {
    "address": "ct_token3",
    "decimals": 18,
    "listed": true,
    "malformed": false,
    "name": "3",
    "noContract": false,
    "pairs": 1,
    "priceAe": null,
    "priceChangeDay": null,
    "priceChangeMonth": null,
    "priceChangeWeek": null,
    "priceChangeYear": null,
    "priceUsd": null,
    "symbol": "3",
    "totalReserve": null,
    "tvlAe": "4.8e-17",
    "tvlUsd": "0",
    "volumeUsdAll": "0",
    "volumeUsdDay": "0",
    "volumeUsdMonth": "0",
    "volumeUsdWeek": "0",
    "volumeUsdYear": "0",
  },
  {
    "address": "ct_token5",
    "decimals": 18,
    "listed": false,
    "malformed": false,
    "name": "5",
    "noContract": false,
    "pairs": 1,
    "priceAe": null,
    "priceChangeDay": null,
    "priceChangeMonth": null,
    "priceChangeWeek": null,
    "priceChangeYear": null,
    "priceUsd": null,
    "symbol": "5",
    "totalReserve": null,
    "tvlAe": null,
    "tvlUsd": null,
    "volumeUsdAll": null,
    "volumeUsdDay": null,
    "volumeUsdMonth": null,
    "volumeUsdWeek": null,
    "volumeUsdYear": null,
  },
]
`;

exports[`TokenController GET /tokens should return all tokens when none are listed 1`] = `
[
  {
    "address": "ct_token1",
    "decimals": 18,
    "listed": false,
    "malformed": false,
    "name": "1",
    "noContract": false,
    "pairs": 1,
    "priceAe": "0.05308695",
    "priceChangeDay": "0",
    "priceChangeMonth": "0",
    "priceChangeWeek": "0",
    "priceChangeYear": "0",
    "priceUsd": "0.0027",
    "symbol": "1",
    "totalReserve": "1e-15",
    "tvlAe": "5.3e-17",
    "tvlUsd": "0",
    "volumeUsdAll": "0",
    "volumeUsdDay": "0",
    "volumeUsdMonth": "0",
    "volumeUsdWeek": "0",
    "volumeUsdYear": "0",
  },
  {
    "address": "ct_token2",
    "decimals": 18,
    "listed": false,
    "malformed": false,
    "name": "2",
    "noContract": false,
    "pairs": 3,
    "priceAe": "0.101118",
    "priceChangeDay": "0",
    "priceChangeMonth": "0",
    "priceChangeWeek": "0",
    "priceChangeYear": "0",
    "priceUsd": "0.0051",
    "symbol": "2",
    "totalReserve": "1e-15",
    "tvlAe": "1.01e-16",
    "tvlUsd": "0",
    "volumeUsdAll": "0",
    "volumeUsdDay": "0",
    "volumeUsdMonth": "0",
    "volumeUsdWeek": "0",
    "volumeUsdYear": "0",
  },
  {
    "address": "ct_token3",
    "decimals": 18,
    "listed": false,
    "malformed": false,
    "name": "3",
    "noContract": false,
    "pairs": 1,
    "priceAe": null,
    "priceChangeDay": null,
    "priceChangeMonth": null,
    "priceChangeWeek": null,
    "priceChangeYear": null,
    "priceUsd": null,
    "symbol": "3",
    "totalReserve": null,
    "tvlAe": "4.8e-17",
    "tvlUsd": "0",
    "volumeUsdAll": "0",
    "volumeUsdDay": "0",
    "volumeUsdMonth": "0",
    "volumeUsdWeek": "0",
    "volumeUsdYear": "0",
  },
  {
    "address": "ct_token5",
    "decimals": 18,
    "listed": false,
    "malformed": false,
    "name": "5",
    "noContract": false,
    "pairs": 1,
    "priceAe": null,
    "priceChangeDay": null,
    "priceChangeMonth": null,
    "priceChangeWeek": null,
    "priceChangeYear": null,
    "priceUsd": null,
    "symbol": "5",
    "totalReserve": null,
    "tvlAe": null,
    "tvlUsd": null,
    "volumeUsdAll": null,
    "volumeUsdDay": null,
    "volumeUsdMonth": null,
    "volumeUsdWeek": null,
    "volumeUsdYear": null,
  },
]
`;

exports[`TokenController GET /tokens/{token_address} should return a single token if it exists 1`] = `
{
  "address": "ct_token1",
  "decimals": 18,
  "listed": false,
  "malformed": false,
  "name": "1",
  "noContract": false,
  "pairs": 1,
  "priceAe": "0.05308695",
  "priceChangeDay": "0",
  "priceChangeMonth": "0",
  "priceChangeWeek": "0",
  "priceChangeYear": "0",
  "priceUsd": "0.0027",
  "symbol": "1",
  "totalReserve": "1e-15",
  "tvlAe": "5.3e-17",
  "tvlUsd": "0",
  "volumeUsdAll": "0",
  "volumeUsdDay": "0",
  "volumeUsdMonth": "0",
  "volumeUsdWeek": "0",
  "volumeUsdYear": "0",
}
`;

exports[`TokenController GET /tokens/{token_address}/pairs should return pairs with liquidity info 1`] = `
{
  "pairs0": [
    {
      "address": "ct_pair2",
      "liquidityInfo": {
        "height": 1,
        "reserve0": "1",
        "reserve1": "1",
        "totalSupply": "1",
      },
      "oppositeToken": {
        "address": "ct_token3",
        "decimals": 18,
        "listed": false,
        "malformed": false,
        "name": "3",
        "noContract": false,
        "symbol": "3",
      },
      "synchronized": true,
    },
    {
      "address": "ct_pair3",
      "liquidityInfo": {
        "height": 2,
        "reserve0": "2",
        "reserve1": "2",
        "totalSupply": "2",
      },
      "oppositeToken": {
        "address": "ct_token5",
        "decimals": 18,
        "listed": false,
        "malformed": false,
        "name": "5",
        "noContract": false,
        "symbol": "5",
      },
      "synchronized": true,
    },
  ],
  "pairs1": [
    {
      "address": "ct_pair1",
      "oppositeToken": {
        "address": "ct_token1",
        "decimals": 18,
        "listed": false,
        "malformed": false,
        "name": "1",
        "noContract": false,
        "symbol": "1",
      },
      "synchronized": true,
    },
  ],
}
`;

exports[`TokenController GET /tokens/{token_address}/pairs should return pairs with no liquidity info 1`] = `
{
  "pairs0": [
    {
      "address": "ct_pair1",
      "oppositeToken": {
        "address": "ct_token2",
        "decimals": 18,
        "listed": false,
        "malformed": false,
        "name": "2",
        "noContract": false,
        "symbol": "2",
      },
      "synchronized": true,
    },
  ],
  "pairs1": [],
}
`;

exports[`TokenController GET /tokens/listed should return listed tokens if some are listed 1`] = `
[
  {
    "address": "ct_token1",
    "decimals": 18,
    "malformed": false,
    "name": "1",
    "noContract": false,
    "symbol": "1",
  },
  {
    "address": "ct_token3",
    "decimals": 18,
    "malformed": false,
    "name": "3",
    "noContract": false,
    "symbol": "3",
  },
]
`;

exports[`TokenController POST /tokens/listed/{token_address} should return 201 with valid auth key and valid token and mark the token as listed 1`] = `
{
  "address": "ct_token1",
  "decimals": 18,
  "listed": false,
  "malformed": false,
  "name": "1",
  "noContract": false,
  "pairs": 1,
  "priceAe": "0.05308695",
  "priceChangeDay": "0",
  "priceChangeMonth": "0",
  "priceChangeWeek": "0",
  "priceChangeYear": "0",
  "priceUsd": "0.0027",
  "symbol": "1",
  "totalReserve": "1e-15",
  "tvlAe": "5.3e-17",
  "tvlUsd": "0",
  "volumeUsdAll": "0",
  "volumeUsdDay": "0",
  "volumeUsdMonth": "0",
  "volumeUsdWeek": "0",
  "volumeUsdYear": "0",
}
`;

exports[`TokenController POST /tokens/listed/{token_address} should return 201 with valid auth key and valid token and mark the token as listed 2`] = `
{
  "address": "ct_token1",
  "decimals": 18,
  "listed": true,
  "malformed": false,
  "name": "1",
  "noContract": false,
  "symbol": "1",
}
`;

exports[`TokenController POST /tokens/listed/{token_address} should return 201 with valid auth key and valid token and mark the token as listed 3`] = `
{
  "address": "ct_token1",
  "decimals": 18,
  "listed": true,
  "malformed": false,
  "name": "1",
  "noContract": false,
  "pairs": 1,
  "priceAe": "0.05308695",
  "priceChangeDay": "0",
  "priceChangeMonth": "0",
  "priceChangeWeek": "0",
  "priceChangeYear": "0",
  "priceUsd": "0.0027",
  "symbol": "1",
  "totalReserve": "1e-15",
  "tvlAe": "5.3e-17",
  "tvlUsd": "0",
  "volumeUsdAll": "0",
  "volumeUsdDay": "0",
  "volumeUsdMonth": "0",
  "volumeUsdWeek": "0",
  "volumeUsdYear": "0",
}
`;
